{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 376,
  "lineage": "b0f9bff6-1442-b57a-d1d5-038c20af10a5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03986d795a88f3288",
            "domain": "vpc",
            "id": "eipalloc-03986d795a88f3288",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-131-76-236.us-east-2.compute.amazonaws.com",
            "public_ip": "3.131.76.236",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Micolo-EIP-production",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Micolo-EIP-production",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:421000527042:internet-gateway/igw-07fcdd7b4fb704029",
            "id": "igw-07fcdd7b4fb704029",
            "owner_id": "421000527042",
            "tags": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Micolo-vpc-06278af0d0191a261-IGW",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Micolo-vpc-06278af0d0191a261-IGW",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "vpc_id": "vpc-06278af0d0191a261"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ext-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:421000527042:loadbalancer/app/ext-alb/98ed91eb2a966b5d",
            "arn_suffix": "app/ext-alb/98ed91eb2a966b5d",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ext-alb-281148239.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:421000527042:loadbalancer/app/ext-alb/98ed91eb2a966b5d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ext-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cec75d180838f622"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02ec5a7c157221e46"
              },
              {
                "subnet_id": "subnet-0f0063069ed6dfa81"
              }
            ],
            "subnets": [
              "subnet-02ec5a7c157221e46",
              "subnet-0f0063069ed6dfa81"
            ],
            "tags": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Micolo-ext-alb",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Micolo-ext-alb",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "vpc_id": "vpc-06278af0d0191a261",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ialb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:421000527042:loadbalancer/app/ialb/6a29f6ecbc09d9db",
            "arn_suffix": "app/ialb/6a29f6ecbc09d9db",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ialb-1201654081.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:421000527042:loadbalancer/app/ialb/6a29f6ecbc09d9db",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ialb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01285c5e5c6ae5d77"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00675cca5252cbed8"
              },
              {
                "subnet_id": "subnet-0856f407dd1634a9f"
              }
            ],
            "subnets": [
              "subnet-00675cca5252cbed8",
              "subnet-0856f407dd1634a9f"
            ],
            "tags": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Micolo-int-alb",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Micolo-int-alb",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "vpc_id": "vpc-06278af0d0191a261",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:421000527042:listener/app/ext-alb/98ed91eb2a966b5d/987c4b8a748fb00d",
            "certificate_arn": "arn:aws:acm:us-east-2:421000527042:certificate/b2686ae3-f691-40e9-a891-c0775d92e23a",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:421000527042:targetgroup/nginx-tgt/12774d9ef8f9f9ff",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:421000527042:listener/app/ext-alb/98ed91eb2a966b5d/987c4b8a748fb00d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:421000527042:loadbalancer/app/ext-alb/98ed91eb2a966b5d",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.zireuz",
            "aws_acm_certificate_validation.zireuz",
            "aws_lb.ext-alb",
            "aws_lb_target_group.nginx-tgt",
            "aws_route53_record.zireuz",
            "aws_security_group.ext-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.zireuz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:421000527042:listener/app/ialb/6a29f6ecbc09d9db/7fac32cfaa939d1d",
            "certificate_arn": "arn:aws:acm:us-east-2:421000527042:certificate/b2686ae3-f691-40e9-a891-c0775d92e23a",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:421000527042:targetgroup/wordpress-tgt/ceb3472d5abac552",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:421000527042:listener/app/ialb/6a29f6ecbc09d9db/7fac32cfaa939d1d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:421000527042:loadbalancer/app/ialb/6a29f6ecbc09d9db",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.zireuz",
            "aws_acm_certificate_validation.zireuz",
            "aws_lb.ialb",
            "aws_lb_target_group.wordpress-tgt",
            "aws_route53_record.zireuz",
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.zireuz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tooling-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:421000527042:targetgroup/tooling-tgt/eaaf271b7ca5c354",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:421000527042:listener-rule/app/ialb/6a29f6ecbc09d9db/7fac32cfaa939d1d/1685705f5cdf7de3",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tooling.zireuz.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:421000527042:listener-rule/app/ialb/6a29f6ecbc09d9db/7fac32cfaa939d1d/1685705f5cdf7de3",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:421000527042:listener/app/ialb/6a29f6ecbc09d9db/7fac32cfaa939d1d",
            "priority": 99,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.zireuz",
            "aws_acm_certificate_validation.zireuz",
            "aws_lb.ialb",
            "aws_lb_listener.web-listener",
            "aws_lb_target_group.tooling-tgt",
            "aws_lb_target_group.wordpress-tgt",
            "aws_route53_record.zireuz",
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.zireuz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:421000527042:targetgroup/nginx-tgt/12774d9ef8f9f9ff",
            "arn_suffix": "targetgroup/nginx-tgt/12774d9ef8f9f9ff",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:421000527042:targetgroup/nginx-tgt/12774d9ef8f9f9ff",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06278af0d0191a261"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tooling-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:421000527042:targetgroup/tooling-tgt/eaaf271b7ca5c354",
            "arn_suffix": "targetgroup/tooling-tgt/eaaf271b7ca5c354",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:421000527042:targetgroup/tooling-tgt/eaaf271b7ca5c354",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tooling-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06278af0d0191a261"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:421000527042:targetgroup/wordpress-tgt/ceb3472d5abac552",
            "arn_suffix": "targetgroup/wordpress-tgt/ceb3472d5abac552",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:421000527042:targetgroup/wordpress-tgt/ceb3472d5abac552",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wordpress-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06278af0d0191a261"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03986d795a88f3288",
            "association_id": "eipassoc-00bd0bcbaa3ae884e",
            "connectivity_type": "public",
            "id": "nat-0adfc08ab77532344",
            "network_interface_id": "eni-075ba2c0d28b2aa05",
            "private_ip": "172.16.0.163",
            "public_ip": "3.131.76.236",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02ec5a7c157221e46",
            "tags": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Micolo-Nat-production",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Micolo-Nat-production",
              "Owner-Email": "micaho2k@gmail.com"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:421000527042:security-group/sg-037d4677675961d67",
            "description": "Allow incoming HTTP connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037d4677675961d67",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "421000527042",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "bastion_sg",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "bastion_sg",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-06278af0d0191a261"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "datalayer-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:421000527042:security-group/sg-01668ea2aaa6076f8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01668ea2aaa6076f8",
            "ingress": [],
            "name": "datalayer-sg",
            "name_prefix": "",
            "owner_id": "421000527042",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "datalayer-sg",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "datalayer-sg",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-06278af0d0191a261"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ext-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:421000527042:security-group/sg-0cec75d180838f622",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cec75d180838f622",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ext-alb-sg",
            "name_prefix": "",
            "owner_id": "421000527042",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ext-alb-sg",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ext-alb-sg",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-06278af0d0191a261"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "int-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:421000527042:security-group/sg-01285c5e5c6ae5d77",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01285c5e5c6ae5d77",
            "ingress": [],
            "name": "int-alb-sg",
            "name_prefix": "",
            "owner_id": "421000527042",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "int-alb-sg",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "int-alb-sg",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-06278af0d0191a261"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:421000527042:security-group/sg-0e14964cfa58188d0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e14964cfa58188d0",
            "ingress": [],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "421000527042",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "nginx-SG",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "nginx-SG",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-06278af0d0191a261"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:421000527042:security-group/sg-042bd148e8af23861",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042bd148e8af23861",
            "ingress": [],
            "name": "webserver-sg",
            "name_prefix": "",
            "owner_id": "421000527042",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "webserver-sg",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "webserver-sg",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-06278af0d0191a261"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-1725191244",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e14964cfa58188d0",
            "security_group_rule_id": "sgr-0708e414af3b4c55e",
            "self": false,
            "source_security_group_id": "sg-037d4677675961d67",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ialb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-3426067234",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01285c5e5c6ae5d77",
            "security_group_rule_id": "sgr-0c0c9ff1d566dc6b0",
            "self": false,
            "source_security_group_id": "sg-0e14964cfa58188d0",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2251184813",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01668ea2aaa6076f8",
            "security_group_rule_id": "sgr-0d7f6696303bb4415",
            "self": false,
            "source_security_group_id": "sg-037d4677675961d67",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.datalayer-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-389259828",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01668ea2aaa6076f8",
            "security_group_rule_id": "sgr-06baada58f63c17e5",
            "self": false,
            "source_security_group_id": "sg-042bd148e8af23861",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nfs-port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-2230661822",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01668ea2aaa6076f8",
            "security_group_rule_id": "sgr-076d086a90644e56f",
            "self": false,
            "source_security_group_id": "sg-042bd148e8af23861",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nginx-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-559203390",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e14964cfa58188d0",
            "security_group_rule_id": "sgr-0bdb97da644801c70",
            "self": false,
            "source_security_group_id": "sg-0cec75d180838f622",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-335416459",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-042bd148e8af23861",
            "security_group_rule_id": "sgr-08e7b5486e71093db",
            "self": false,
            "source_security_group_id": "sg-01285c5e5c6ae5d77",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-233043285",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-042bd148e8af23861",
            "security_group_rule_id": "sgr-03a03865c86027a66",
            "self": false,
            "source_security_group_id": "sg-037d4677675961d67",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:421000527042:subnet/subnet-0856f407dd1634a9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0856f407dd1634a9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "421000527042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Micolo-private_subnet-0",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Micolo-private_subnet-0",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "vpc_id": "vpc-06278af0d0191a261"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:421000527042:subnet/subnet-00675cca5252cbed8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00675cca5252cbed8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "421000527042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Micolo-private_subnet-1",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Micolo-private_subnet-1",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "vpc_id": "vpc-06278af0d0191a261"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:421000527042:subnet/subnet-05413631f97420249",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.16.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05413631f97420249",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "421000527042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Micolo-private_subnet-2",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Micolo-private_subnet-2",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "vpc_id": "vpc-06278af0d0191a261"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:421000527042:subnet/subnet-0927abbe81faae642",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0927abbe81faae642",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "421000527042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Micolo-private_subnet-3",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Micolo-private_subnet-3",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "vpc_id": "vpc-06278af0d0191a261"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:421000527042:subnet/subnet-02ec5a7c157221e46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ec5a7c157221e46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "421000527042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Micolo-public_subnet-0",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Micolo-public_subnet-0",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "vpc_id": "vpc-06278af0d0191a261"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:421000527042:subnet/subnet-0f0063069ed6dfa81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0063069ed6dfa81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "421000527042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Micolo-public_subnet-1",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Micolo-public_subnet-1",
              "Owner-Email": "micaho2k@gmail.com"
            },
            "vpc_id": "vpc-06278af0d0191a261"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:421000527042:vpc/vpc-06278af0d0191a261",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-090bccf2c8c8c4e3b",
            "default_route_table_id": "rtb-0732bf5dcfbf5d52f",
            "default_security_group_id": "sg-083a923200ddb759a",
            "dhcp_options_id": "dopt-00107865a02e49ff5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06278af0d0191a261",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0732bf5dcfbf5d52f",
            "owner_id": "421000527042",
            "tags": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Owner-Email": "micaho2k@gmail.com",
              "name": "Micolo-VPC"
            },
            "tags_all": {
              "Billing-Account": "421000527042",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Owner-Email": "micaho2k@gmail.com",
              "name": "Micolo-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}